# wxCalc

./: .gitignore  Button.cpp  CMakeLists.txt  Calc  Calc.cpp  README.md
.github/workflows/: c-cpp.yml
src/: SpaceFactory.cpp
src/op/: Calculate.cpp  Calculate.h  Operations.h
src/testutils/: equals.h
src/ui/: SpaceFactory.cpp
test/: CMakeLists.txt  Test.cpp  Test_Calc  test.sh
